# orion_common

./: .gitignore  README.md
docs/: README.md  html_format.sh  links.sh  reduce.sh  rename_and_compress.sh
orion/: CMakeLists.txt  README.md  package.xml
orion_assets/: LICENSE  README.md  calc_inertia.py
orion_assets/3DPrintAssets/: README.md  half_plate.stl  joint_plates_m3.stl  joint_plates_m4.stl  joint_screen.stl  orion_toy_cuboid.stl  orion_toy_letters.stl  screen_support_h1.stl  screen_support_h2.stl  servo_connection_ext.stl  servo_support.stl  simple_arm.stl  touch_sensor_prot-touch_sensor_prot.stl
orion_assets/FreeCadAssets/: README.md  astra_s.FCStd  b18650.FCStd  bathold_support.FCStd  batteryholderx3.FCStd  bms_186503s.FCStd  caster_wheel_p1.FCStd  caster_wheel_p2.FCStd  caster_wheel_p3.FCStd  com_plate_template.FCStd  coupling.FCStd  dc_motor_wenc.FCStd  driver_l298.FCStd  esp32.FCStd  esp32_adapter.FCStd  half_plate_template.FCStd  joint_plates_m3.FCStd  joint_plates_m4.FCStd  joint_screen.FCStd  ld19_lidar.FCStd  maixsense_support.FCStd  microphone.FCStd  mini_speaker.FCStd  motor_mount.FCStd  neumatic.FCStd  orion_assem_fillets.FCStd  orion_assem_screen.FCStd  orion_assem_servo.FCStd  orion_assem_touch.FCStd  orion_bases_assem.FCStd  orion_comp_assem.FCStd  orion_servo_demo.FCStd  orion_test_assem.FCStd  orion_toy_cuboid.FCStd  orion_toy_letters.FCStd  orion_wall_demo.FCStd  regulator.FCStd  regulator_2.FCStd  regulator_support.FCStd  ring.FCStd  (+40 more)
orion_assets/LasserAssets/: README.md  bathold_support.dxf  com_plate.dxf  com_plate_template-com_template.dxf  com_plate_template.dxf  half_plate_template.dxf  wall_batteries.dxf  wall_curve.dxf  wall_curve_speaker.dxf  wall_fdefault.dxf  wall_flidar.dxf  wall_ldefault.dxf  wall_llidar.dxf  wall_regulator.dxf  wall_rpi.dxf  wall_screen-wall_screen.dxf  wall_screen.dxf  wall_servo.dxf  wall_stereo.dxf
orion_base/: README.md
orion_base/orion_ctl_micro_ros/: README.md  main.cpp  platformio.ini
orion_base/orion_interaction_micro_ros/: README.md  platformio.ini
orion_base/orion_interaction_serial/: .gitkeep
orion_bringup/: CMakeLists.txt  README.md  example_udev.rules  package.xml  startup_robot.service  startup_robot.sh
orion_bringup/config/: ldlidar.yaml  lidar_lifecycle_mgr.yaml
orion_bringup/launch/: bringup.launch.py
orion_control/: CMakeLists.txt  README.md  ctl_orion.xml  diff_ctl_micro_ros.xml  package.xml
orion_control/config/: control_manager.yaml  controllers.yaml  g_mov_servo_controller.yaml  gz_ros_control.yaml  joint_state_broadcaster.yaml  mobile_base_controller.yaml  simple_left_arm_controller.yaml  simple_right_arm_controller.yaml
orion_control/include/orion_control/: diffdrive_orion.hpp  forward_orion.hpp  wheel.hpp
orion_control/src/: CMakeLists.txt  diffdrive_orion.cpp  forward_orion.cpp  wheel.cpp
orion_description/: CMakeLists.txt  README.md  package.xml
orion_description/launch/: model_vis.launch.py  rsp.launch.py
orion_description/meshes/: astra_s.stl  b18650.stl  bms186503s.stl  (+57 more)
orion_docker/: README.md
orion_utils_py/: README.md  package.xml  setup.cfg  setup.py
(+37 files in other folders)
