<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orion_bringup</name>
  <version>0.4.0</version>
  <description>Bringup and startup applications for the ORION robot</description>
  <maintainer email="dfelipe.lopez@gmail.com">DanielFLopez1620</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>orion_description</depend>
  <depend>orion_control</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
