<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>orion_control</name>
    <version>0.2.0</version>
    <description>Package that contains the controller configuration for ORION robot</description>
    <maintainer email="dfelipe.lopez@gmail.com">DanielFLopez1620</maintainer>
    <license>BS3 Cluase 3</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>orion_description</depend>
    <depend>joint_state_broadcaster</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
